Renamed and reoganized project components and their SCSS files to prepare for further abstraction

--- a/client/src/SCSS/home/account/accountBlurredBackground.scss
+++ b/client/src/SCSS/home/account/accountBlurredBackground.scss
@@ -1,4 +1,4 @@
-@import "../utils/variables";
+@import "../../utils/variables";
 
 .account-modals-blurred-background {
 	// Must be more than searchSortFilter bar and table headers
