--- a/client/src/SCSS/home/projects-bugs-shared/list/listTableSearchFilterSortBar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listTableSearchFilterSortBar.scss
@@ -1,5 +1,5 @@
-@import "../utils/variables";
-@import "../utils//mixins";
+@import "../../../utils/variables";
+@import "../../../utils//mixins";
 
 .search-filter-sort-component {
 	// Must be more than table header so filter button can overlap
