--- a/client/src/SCSS/home/projects-bugs-shared/item/viewItemModalDisplayInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/viewItemModalDisplayInfo.scss
@@ -1,7 +1,7 @@
-// The DisplayProjectInfo component also uses shared SCSS in viewProjectModal.scss
-// This file is for SCSS used only by  the DisplayProjectInfo component
-@import "../../utils/variables";
-@import "../../utils//mixins";
+// The ViewItemModalDisplayInfo component also uses shared SCSS in viewItemModal.scss
+// This file is for SCSS used only by  the ViewItemModalDisplayInfo component
+@import "../../../utils/variables";
+@import "../../../utils//mixins";
 
 .view-project-modal-component {
 
