--- a/client/src/SCSS/home/projects-bugs-shared/list/listTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listTableAndRows.scss
@@ -1,5 +1,5 @@
-@import "../utils/variables";
-@import "../utils//mixins";
+@import "../../../utils/variables";
+@import "../../../utils//mixins";
 
 .projects-table-component {
 	font-family: Arial, Helvetica, sans-serif;
