--- a/client/src/SCSS/home/projects-bugs-shared/item/createItemSidebar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/createItemSidebar.scss
@@ -1,7 +1,7 @@
 @import "../../../utils/variables";
 @import "../../../utils//mixins";
 
-.create-projects-component {
+.create-item-component {
 	.blurred-background {
 		// Must be more than searchFilterSortBar.scss
 		z-index: 2;
@@ -13,7 +13,7 @@
 		width: 100vw;
 	}
 
-	.create-project-sidebar {
+	.create-item-sidebar {
 		// Must be more than searchFilterSortBar.scss
 		z-index: 2;
 		position: fixed;
