--- a/client/src/SCSS/home/projects-bugs-shared/item/viewItemModalEditInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/viewItemModalEditInfo.scss
@@ -3,7 +3,7 @@
 @import "../../../utils/variables";
 @import "../../../utils//mixins";
 
-.view-project-modal-component {
+.view-item-modal-component {
 	.form-errors {
 		display: block;
 		color: red;
@@ -38,12 +38,12 @@
 		text-align: center;
 	}
 
-	.project-box__form-character-counter {
+	.item-box__form-character-counter {
 		float: right;
 		margin: 5px 2px 2px 0px;
 	}
 
-	.project-box__form-textarea {
+	.item-box__form-textarea {
 		outline: none;
 		margin-bottom: 10px;
 		border: 2px solid black;
@@ -62,7 +62,7 @@
 		resize: none;
 	}
 
-	.project-box__group__field__form-label {
+	.item-box__group__field__form-label {
 		// To make form-selects vertically parallel
 		display: inline-block;
 		// Width decides starting location of the following input element
@@ -70,29 +70,29 @@
 		font-weight: bold;
 	}
 
-	.project-box__group__field__form-label--medium-width {
+	.item-box__group__field__form-label--medium-width {
 		// Width decides starting location of the following input element
 		width: 90px;
 	}
 
-	.project-box__group__field__form-label--long-width {
+	.item-box__group__field__form-label--long-width {
 		// Width decides starting location of the following input element
 		width: 125px;
 	}
 
-	.project-box__group__field__form-select {
+	.item-box__group__field__form-select {
 		border: 1px solid black;
 		background-color: white;
 		width: 125px;
 		font-size: 14px;
 	}
 
-	.project-box__group__field__form-date {
+	.item-box__group__field__form-date {
 		border: 1px solid black;
 		background-color: white;
 	}
 
-	.project-box__group__field__tooltip-container {
+	.item-box__group__field__tooltip-container {
 		// Set to relative so changing the z-index using js can be
 		// ...used to control if the tooltip is visible or not.
 		position: relative;
@@ -102,7 +102,7 @@
 		visibility: hidden;
 	}
 
-	.project-box__group__field__tooltip-container__arrow-left {
+	.item-box__group__field__tooltip-container__arrow-left {
 		float: left;
 		height: 0;
 		width: 0;
@@ -111,7 +111,7 @@
 		border-right: 20px solid black;
 	}
 
-	.project-box__group__field__tooltip-container__text-box {
+	.item-box__group__field__tooltip-container__text-box {
 		float: left;
 		border: 1px solid black;
 		border-top-right-radius: 10px;
@@ -124,7 +124,7 @@
 		color: white;
 	}
 
-	/* .project-box__group__field__tooltip-container__arrow-up {
+	/* .item-box__group__field__tooltip-container__arrow-up {
 		margin: 10px 0px 0px 65px;
 		height: 0;
 		width: 0;
@@ -133,7 +133,7 @@
 		border-bottom: 20px solid black;
 	}
 
-	.project-box__group__field__tooltip-container__text-box {
+	.item-box__group__field__tooltip-container__text-box {
 		background-color: black;
 		padding: 12px;
 		width: 146px;
