--- a/client/src/SCSS/home/account/accountModals.scss
+++ b/client/src/SCSS/home/account/accountModals.scss
@@ -71,6 +71,12 @@
 		text-align: center;
 	}
 
+	.form__text-input--password {
+		// Tries to help with password size disparity between browsers
+		font: small-caption;
+		font-size: 16px;
+	}
+
 	.form__errors {
 		display: block;
 		color: red;
@@ -79,6 +85,7 @@
 	.form__submit {
 		margin-top: 10px;
 		margin-bottom: 5px;
+		outline: none;
 		border: 0;
 		background: $light-blue-gray;
 		padding: 10px;
