--- a/client/src/SCSS/home/account/accountBlurredBackground.scss
+++ b/client/src/SCSS/home/account/accountBlurredBackground.scss
@@ -7,7 +7,7 @@
 	left: 0;
 	top: $navbar-height;
 	background-color: black;
-	opacity: 0.5;
+	opacity: $blurred-background-opacity;
 	height: 100vh;
 	width: 100vw;
 }
