--- a/client/src/SCSS/home/projects-bugs-shared/deleteItemsModal.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/deleteItemsModal.scss
@@ -8,7 +8,7 @@
 		top: $navbar-height;
 		left: 0px;
 		background-color: black;
-		opacity: 0.5;
+		opacity: $blurred-background-opacity;
 		height: 100vh;
 		width: 100vw;
 	}
