--- a/client/src/SCSS/home/projects-bugs-shared/item/createItemSidebar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/createItemSidebar.scss
@@ -8,7 +8,7 @@
 		position: absolute;
 		top: $navbar-height;
 		background-color: black;
-		opacity: 0.5;
+		opacity: $blurred-background-opacity;
 		height: 100vh;
 		width: 100vw;
 	}
@@ -25,7 +25,7 @@
 		border-left: none;
 		background-color: white;
 		height: 700px;
-		width: $create-project-bug-sidebar-width;
+		width: $create-item-sidebar-width;
 		text-align: center;
 		font-family: Arial, Helvetica, sans-serif;
 		// Gives sidebar scrolling when content goes beyond height
@@ -144,6 +144,7 @@
 	.form__submit {
 		margin-top: 10px;
 		margin-bottom: 20px;
+		outline: none;
 		border: 0;
 		background-color: $light-blue-gray;
 		padding: 10px;
