--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -4,12 +4,14 @@
 // Basic
 $black: #000000;
 // Grays
-$very-light-gray: #f3f2f1;
+$very-light-gray: #f5f5f5;
 $light-gray: #e5e5e5;
+$medium-lighter-gray: #e4e4e4;
 $medium-light-gray: #bfbfbf;
 $medium-gray: #919191;
 $dark-gray: #757575;
 // Blue grays
+$very-light-blue-gray: #7390af;
 $light-blue-gray: #607c99;
 $blue-gray: #50677f;
 // Blue teals
@@ -59,7 +61,7 @@ $common-line-height: 20px;
 //=========
 // Opacity
 //=========
-$blurred-background-opacity: 0.7;
+$blurred-background-opacity: 0.5;
 
 //============
 // Arithmetic
