--- a/client/src/SCSS/home/projects-bugs-shared/deleteItemsModal.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/deleteItemsModal.scss
@@ -21,25 +21,31 @@
 		transform: translate(-50%, -50%);
 		border: 5px solid black;
 		background-color: white;
-		height: 150px;
+		height: 170px;
 		width: 300px;
 		text-align: center;
 		font-family: Arial, Helvetica, sans-serif;
 	}
 
-	.outer-container {
-		// Moves warning message down
-		margin-top: 35px;
+	// Needed to move the warning message down
+	.warning-container {
+		margin-top: 45px;
 		width: 100%;
 	}
 
-	.warning-message {
+	.warning-container__message {
 		font-size: 22px;
+	}
+
+	.backend__errors {
+		margin-top: 10px;
+		display: block;
+		color: red;
 	}
 
 	.centered-buttons-container {
 		position: absolute;
-		top: 90px;
+		top: 110px;
 		left: 50%;
 		transform: translate(-50%);
 		width: 265px;
