--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -38,20 +38,22 @@ $list-table-row-height: 50px;
 $home-min-width: 1000px;
 $edit-account-modal-width:  540px;
 $create-item-sidebar-width: 500px;
+$mini-list-table-width: 300px;
 $filter-button-width: 90px;
 $options-button-width: 36px;
 
 //=========
 // Margins
 //=========
-$view-item-bug-modal-margin: 20px;
+$view-item-bug-modal-margin: 0px;
 $form-input-margin-bottom: 10px;
 
 //==========
 // Borders
 //==========
 $search-bar-border-width: 1px;
-$view-item-bug-modal-border-width: 5px;
+$view-item-bug-modal-border-width: 0px;
+$mini-list-table-border-width: 2px;
 
 //======
 // Text
