--- a/client/src/SCSS/home/projects-bugs-shared/list/listTableSearchFilterSortBar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listTableSearchFilterSortBar.scss
@@ -14,7 +14,7 @@
 		border: 1px solid black;
 		border-left: none;
 		border-right: none;
-		background-color: $light-gray;
+		background-color: $search-filter-sort-bar-color;
 		height: $search-filter-sort-bar-height;
 		width: 100%;
 	}
