--- a/client/src/SCSS/home/projects-bugs-shared/list/miniListTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/miniListTableAndRows.scss
@@ -4,8 +4,7 @@
 .mini-list-table-component {
 	// Must be more than searchFilterSortBar
 	z-index: 2;
-	position: fixed;
-	top: $navbar-height;
+	float: left;
 	border-right: $mini-list-table-border-width solid black;
 	background-color: $list-table-background-color;
 	width: $mini-list-table-width;
@@ -28,20 +27,19 @@
 		height: $list-table-row-height + ($list-table-row-height * 0.5);
 	}
 
-	.mini-list-table__row--highlight:hover {
-		background-color: $very-light-gray;
-	}
-
 	.mini-list-table__row--selected {
 		background-color: $medium-lighter-gray;
 	} 
 
-	/* .mini-list-table__header {
+	.mini-list-table__header {
+		position: -webkit-sticky;
+		position: sticky;
+		top: $navbar-height + $top-bar-height + $top-bar-border-width;
 		background-color: $list-table-background-color;
 		// Used box shadow since the header row being sticky with 
 		// ...background-color applied keeps the bottom-border from appearing
 		box-shadow: 0 1px 0 $medium-gray;
-	} */
+	}
 
 	.mini-list-table__data {
 		padding: 0px 7px 0px 7px;
@@ -54,6 +52,5 @@
 
 	.mini-list-table__data__info--blue-link {
 		color: $blue-link;
-		cursor: pointer;
 	}
 }
