--- a/client/src/SCSS/home/projects-bugs-shared/list/miniListTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/miniListTableAndRows.scss
@@ -48,6 +48,7 @@
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
+		cursor: default;
 	}
 
 	.mini-list-table__data__info--blue-link {
