--- a/client/src/SCSS/home/projects-bugs-shared/item/viewItemModal.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/viewItemModal.scss
@@ -5,12 +5,18 @@
 	.view-item-modal {
 		// Must be more than searchFilterSortBar
 		z-index: 2;
+		position: fixed;
+		top: $navbar-height + $top-bar-height + $top-bar-border-width;
+		left: $mini-list-table-width + $mini-list-table-border-width;
 		/* left: $mini-list-table-width + $mini-list-table-border-width; */
 		background-color: white;
 		// Height and width values were found through trial and error
 		// ...to make modal resize (using js) look less jumpy
-		width: 100%;
+		height: 10vh;
+		width: 1000px;
 		font-family: Arial, Helvetica, sans-serif;
+		overflow-y: auto !important;
+		overflow-x: auto !important;
 	}
 
 	.item-content-container {
