--- a/client/src/SCSS/home/projects-bugs-shared/item/viewItemModalTopBar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/viewItemModalTopBar.scss
@@ -2,6 +2,8 @@
 @import "../../../utils//mixins";
 
 .top-bar-component {
+	// Must be more than viewItemModal
+	z-index: 2;
 	// Sticky instead of fixed for positioning of other components
 	position: -webkit-sticky;
 	position: sticky;
@@ -12,6 +14,22 @@
 	/* height: $search-filter-sort-bar-height; */
 	width: 100%;
 	font-family: Arial, Helvetica, sans-serif;
+
+	.back-button {
+		@include back-exit-buttons();
+		top: 11px;
+		left: 17px;
+		color: $dark-gray;
+		font-size: 20px;
+	}
+	.back-button:hover,
+	.back-button:active {
+		color: $black;
+	}
+
+	.back-button__text {
+		margin-left: 7px;;
+	}
 
 	.item-options-container {
 		z-index: 3;
