--- a/client/src/SCSS/home/projects-bugs-shared/list/miniListTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/miniListTableAndRows.scss
@@ -55,7 +55,11 @@
 		cursor: default;
 	}
 
-	.mini-list-table__data__info--blue-link {
+	.list-table__data__info {
 		color: $blue-link;
+	}
+
+	.list-table__data__info--red {
+		color: $red-link;
 	}
 }
