--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -19,6 +19,8 @@ $light-blue-teal: #8ba8b3;
 $dark-blue-teal: #50798b;
 // Blue for links
 $blue-link: #005ed8;
+// Reds
+$red-link: #ff5656;
 // Components
 $search-filter-sort-bar-color: $light-gray;
 $list-table-background-color: #ffffff;
