Midway through refactoring item and list components

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainer.scss
@@ -59,7 +59,7 @@
 		overflow-wrap: anywhere;
 	}
 
-	// Used in ViewItemModalEditInfo to calculate description size using JS
+	// Used in ItemContainerEditInfo to calculate description size using JS
 	.item-box--invisible {
 		position: absolute;
 		visibility: hidden;
