--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditInfo.scss
@@ -1,8 +1,8 @@
-// The ViewItemModalEditInfo component also uses shared SCSS in viewItemModal.scss
-// This file is for SCSS used only by  the ViewItemModalEditInfo component
 @import "../../../utils/variables";
 @import "../../../utils//mixins";
 
+// The ItemContainerEditInfo component also uses shared SCSS in itemContainer.scss
+// This file is for SCSS used only by  the ItemContainerEditInfo component
 .view-item-modal-component {
 	.form-errors {
 		display: block;
