--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -43,7 +43,7 @@ $top-bar-height: 46px;
 $home-min-width: 1000px;
 $edit-account-modal-width:  540px;
 $create-item-sidebar-width: 500px;
-$mini-list-table-width: 300px;
+$list-sidebar-width: 300px;
 $filter-button-width: 90px;
 $options-button-width: 36px;
 
@@ -57,7 +57,7 @@ $form-input-margin-bottom: 10px;
 //==========
 $search-bar-border-width: 1px;
 $top-bar-border-width: 1px;
-$mini-list-table-border-width: 2px;
+$list-sidebar-border-width: 2px;
 
 //======
 // Text
